crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__boolean_default@mysql_boolean_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
assertion_line: 547
expression: sql
---
ALTER TABLE `users` MODIFY COLUMN `is_active` bool NOT NULL DEFAULT (true)
