crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__boolean_default@postgres_boolean_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
expression: sql
---
ALTER TABLE "users" ALTER COLUMN "is_active" SET DEFAULT true
