crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__boolean_default@sqlite_boolean_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
assertion_line: 547
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "is_active" boolean NOT NULL DEFAULT (true) )
INSERT INTO "users_temp" ("id", "is_active") SELECT "id", "is_active" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
