crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__build_modify_column_default@mysql_set_default_users.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
assertion_line: 245
expression: sql
---
ALTER TABLE `users` MODIFY COLUMN `email` text DEFAULT ('unknown')
