crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__build_modify_column_default@postgres_drop_default_users.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
expression: sql
---
ALTER TABLE "users" ALTER COLUMN "email" DROP DEFAULT
