crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__build_modify_column_default@sqlite_set_default_users.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
assertion_line: 245
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "email" text DEFAULT ('unknown') )
INSERT INTO "users_temp" ("id", "email") SELECT "id", "email" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
