crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__change_default_value@mysql_change_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
assertion_line: 447
expression: sql
---
ALTER TABLE `users` MODIFY COLUMN `email` text DEFAULT ('new@example.com')
