crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__change_default_value@postgres_change_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
expression: sql
---
ALTER TABLE "users" ALTER COLUMN "email" SET DEFAULT 'new@example.com'
