crates/vespertide-query/src/sql/snapshots/vespertide_query__sql__modify_column_default__tests__change_default_value@sqlite_change_default.snap
---
source: crates/vespertide-query/src/sql/modify_column_default.rs
assertion_line: 447
expression: sql
---
CREATE TABLE "users_temp" ( "id" integer NOT NULL, "email" text DEFAULT ('new@example.com') )
INSERT INTO "users_temp" ("id", "email") SELECT "id", "email" FROM "users"
DROP TABLE "users"
ALTER TABLE "users_temp" RENAME TO "users"
